# bedrock-slack-app

./: README.md
sam-bedrock/: README.md  pyproject.toml  samconfig.toml  template.yaml
sam-bedrock/bedrock-slack-app/: app.py  requirements.txt  slack_app.py
sam-bedrock/hello_world/: .env.example  slack_app.py
